[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Pizel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Items/ActiveItemBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Items/ItemDisplayHUD.gd" type="Script" id=3]
[ext_resource path="res://Audio/SFX/sfx_sounds_powerup4.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 1 )

[node name="ItemDisplayHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.152941, 0.137255, 0.164706, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemText" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -24.0
margin_right = 80.0
margin_bottom = 24.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipText" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.65
anchor_right = 0.5
anchor_bottom = 0.65
margin_left = -80.0
margin_top = -12.0
margin_right = 80.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Press Z or X to continue[/center]"
text = "Press Z or X to continue"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteContainer" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -38.0
margin_right = 38.0
margin_bottom = 78.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActiveItemBox" parent="SpriteContainer" instance=ExtResource( 2 )]
position = Vector2( 38, 39 )

[node name="RichTextLabel" type="RichTextLabel" parent="SpriteContainer"]
anchor_left = 0.5
anchor_top = -0.15
anchor_right = 0.5
anchor_bottom = -0.15
margin_left = -32.0
margin_right = 32.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Equipped[/center]"
text = "Equipped"
scroll_active = false

[node name="Tween" type="Tween" parent="."]

[node name="AudioOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
